2023-12-26T08:12:30Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7327859545 # 2202
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-26
* notice: last 14d: unq all: 4 20
* notice: prev accum: outdated-unq outdated-all / unq all: 2164 6035 / 2175 6055
* notice: next accum: outdated-unq outdated-all / unq all: 2164 6035 / 2176 6056
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-12-12 2023-12-26]

2023-12-26T00:44:07Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7325363542 # 2201
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-26
* notice: last 14d: unq all: 3 20
* notice: prev accum: outdated-unq outdated-all / unq all: 2164 6035 / 2174 6054
* notice: next accum: outdated-unq outdated-all / unq all: 2164 6035 / 2175 6055
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-12-25]

2023-12-25T16:11:47Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7322961512 # 2200
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-25
* notice: last 14d: unq all: 2 19
* notice: prev accum: outdated-unq outdated-all / unq all: 2161 6032 / 2174 6054
* notice: next accum: outdated-unq outdated-all / unq all: 2164 6035 / 2174 6054
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-12-11] / []

2023-12-24T16:11:11Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7315616334 # 2197