@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-12-26T08:12:30Z",
-  "count_outdated" : 6035,
-  "uniques_outdated" : 2164,
+  "timestamp" : "2023-12-27T00:44:17Z",
+  "count_outdated" : 6037,
+  "uniques_outdated" : 2165,
   "count" : 6056,
   "uniques" : 2176,
   "clones" : [
-    {
-      "timestamp": "2023-12-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-12-13T00:00:00Z",
       "count": 2,
