@@ -1,3 +1,12 @@
+2023-12-27T00:44:17Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7333804725 # 2204
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-27
+* notice: last 14d: unq all: 4 19
+* notice: prev accum: outdated-unq outdated-all / unq all: 2164 6035 / 2176 6056
+* notice: next accum: outdated-unq outdated-all / unq all: 2165 6037 / 2176 6056
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-12-12] / []
+
 2023-12-26T08:12:30Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7327859545 # 2202
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-26
